--- a/01-Jenkins/Pipeline/jenkinsfile
+++ b/01-Jenkins/Pipeline/jenkinsfile
@@ -35,8 +35,8 @@ node {
 	def server= Artifactory.server 'jfrog'
 	def uploadSpec= """{
 	"files": [{
-	"pattern": "/target/*.war",
-	"target": "Devops301/"}]
+	"pattern": "/root/.jenkins/workspace/Pipeline as a code/01-Jenkins/Code/petclinic/target/*.war",
+	"target": "Devops301"}]
 	}"""
         server.upload(uploadSpec)
 	}
