--- a/01-Jenkins/Pipeline/jenkinsfile
+++ b/01-Jenkins/Pipeline/jenkinsfile
@@ -4,7 +4,7 @@ node {
 
      
   stage('Git-Checkout') {
-   git 'https://github.com/adityashankar80/mindtree-devops-30Jan2020.git'
+   git 'https://github.com/smbbasha/devops.git'
   }
     
  def project_path="01-Jenkins/Code/petclinic"
