--- a/01-Jenkins/Pipeline/jenkinsfile
+++ b/01-Jenkins/Pipeline/jenkinsfile
@@ -43,6 +43,13 @@ node {
    stage('Docker-Stage-Deployment') {
    sh label: '', script: 'docker-compose up -d --build'
   }
+  stage('Geting Ready For Ansible') {
+  sh label: 'Docker', script: 'cp -rf target/*.war ../../../04-Terraform/03-Ansible-Deploy/ansible/04-Tomcat/templates/'
+  sh label: 'Jenkins', script: "echo '<h1> TASK BUILD ID: ${env.BUILD_DISPLAY_NAME}</h1>' > ../../../04-Terraform/03-Ansible-Deploy/ansible/04-Tomcat/templates/apps/index.html"
+}  
+   
+ }
+
 def notify(status){
     emailext (
 	to: "amitvashist7@gmail.com",
