--- a/01-Jenkins/Pipeline/jenkinsfile
+++ b/01-Jenkins/Pipeline/jenkinsfile
@@ -4,7 +4,7 @@ node {
 
      
   stage('Git-Checkout') {
-   git branch: 'master_dev', url: 'https://github.com/smbbasha/devops'
+   git 'https://github.com/smbbasha/devops.git'
   }
     
  def project_path="01-Jenkins/Code/petclinic"
@@ -43,13 +43,19 @@ node {
    stage('Docker-Stage-Deployment') {
    sh label: '', script: 'docker-compose up -d --build'
   }
+ 
   stage('Geting Ready For Ansible') {
   sh label: 'Docker', script: 'cp -rf target/*.war ../../../04-Terraform/03-Ansible-Deploy/ansible/04-Tomcat/templates/'
   sh label: 'Jenkins', script: "echo '<h1> TASK BUILD ID: ${env.BUILD_DISPLAY_NAME}</h1>' > ../../../04-Terraform/03-Ansible-Deploy/ansible/04-Tomcat/templates/apps/index.html"
-}  
-   
+}    
  }
 
+notify('Job Completed')   
+} catch (err) {
+  notify("Error ${err}")
+  currentBuild.result = 'FAILURE'
+}
+}
 def notify(status){
     emailext (
 	to: "amitvashist7@gmail.com",
@@ -58,4 +64,3 @@ def notify(status){
 	<p>Check console output at <a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a></p>""",
 		)
 	}
-
